Fixes to the installer

--- a/NewGuid/NewGuid.csproj
+++ b/NewGuid/NewGuid.csproj
@@ -121,13 +121,11 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\..\Users\JuanS\Documents\Visual Studio 2012\Addins\NewGuid - For Testing.AddIn">
-      <Link>NewGuid - For Testing.AddIn</Link>
-    </Content>
     <Content Include="Installer\NewGuid.AddIn" />
     <Content Include="Installer\NewGuid.dll" />
     <Content Include="NewGuid.AddIn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <None Include="Installer\NewGuid.vscontent">
       <SubType>Designer</SubType>
